final re-write : modest look

--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loan Amortization Schedule</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Using Poppins font for a modern look -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Loan Amortization Schedule</h1>
+  <div class="container">
+    <h1>Loan Amortization Schedule</h1>
 
-  <label for="principal">Principal:</label>
-  <input type="number" id="principal" value="10000"><br>
+    <div class="form-group">
+      <label for="principal">Principal:</label>
+      <input type="number" id="principal" value="10000">
+    </div>
 
-  <label for="interestRate">Annual Interest Rate (%):</label>
-  <input type="number" id="interestRate" value="5"><br>
+    <div class="form-group">
+      <label for="interestRate">Annual Interest Rate (%):</label>
+      <input type="number" id="interestRate" value="5">
+    </div>
 
-  <label for="months">Number of Months:</label>
-  <input type="number" id="months" value="12"><br>
+    <div class="form-group">
+      <label for="months">Number of Months:</label>
+      <input type="number" id="months" value="12">
+    </div>
 
-  <label for="startDate">Start Date:</label>
-  <input type="date" id="startDate" value="2023-01-01"><br>
+    <div class="form-group">
+      <label for="startDate">Start Date:</label>
+      <input type="date" id="startDate" value="2023-01-01">
+    </div>
 
-  <button onclick="generateSchedule()">Generate Schedule</button>
+    <button onclick="generateSchedule()">Generate Schedule</button>
 
-  <div id="scheduleContainer"></div>
+    <div id="scheduleContainer"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
